# crate

./: .gitignore  CMakeLists.txt
cmake/: CrateReusables.cmake
crate/: crate.cc  crate.ccm  defines.cc  platform.cc
crate/memory/: allocator.cc
